Updated the script.js file.

--- a/style.css
+++ b/style.css
@@ -38,13 +38,13 @@ body {
 }
 
 .hour {
-  background-color: #ffffff;
+  background-color: #9297a1;
   color: #000000;
   border-top: 1px dashed #000000;
 }
 
 .past {
-  background-color: #d3d3d3;
+  background-color: #1cb6d1;
   color: white;
 }
 
