Colorized the .hour tab.

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
 }
 
 .hour {
-  background-color: #f8f8fa;
+  background-color: #c2ee7a;
   color: #000000;
   border-top: 1px dashed #000000;
 }
